--- a/frontend-react/src/assets/css/style.css
+++ b/frontend-react/src/assets/css/style.css
@@ -1,3 +1,16 @@
 body{
     background-color: #000000;
 }
+
+.bg-light-dark{
+    background-color: #2B3035;
+}
+#root{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container{
+    flex: 1;
+}
